# votrexian_db

./: .gitignore  Cargo.toml  LICENSE  README.md
json_input_test/: test_data.json  varied_test_data.json
src/: database.rs  main.rs  models.rs
unit_testing/: file_to_blob_json.py  gen_data.py  gen_varied_data.py  test_data.json
