[package]
name = "votrexian_db"
version = "0.1.0"
edition = "2024"
authors = ["Arson <arsontomanta@votrexian.my.id>"]
description = "Ultra-fast in-memory Key-Value DBMS with LZ4 compression"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }

# Framework serialisasi wajib
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Mesin kompresi dan snapshot biner
lz4_flex = "0.11"
bincode = "1.3"

[profile.release]
opt-level = "z"      # Fokus nge-kecilin ukuran biner
lto = true           # Link Time Optimization (bikin binary lebih kenceng & kecil)
codegen-units = 1    # Maksimalkan optimasi compiler (build agak lama, hasil super mantap)
panic = "abort"      # Buang info stack trace buat hemat space RAM & disk
strip = true         # Buang simbol debug otomatis