[package]
name = "votrexian_db"
version = "0.2.0"
edition = "2024"
authors = ["Arson <arsontomanta@votrexian.my.id>"]
description = "Ultra-fast in-memory Key-Value DBMS with LZ4 compression"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }

# Framework serialisasi wajib
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Mesin kompresi dan snapshot biner
lz4_flex = "0.11"
bincode = "1.3"

# Decoder Base64 biar RAM gak bengkak
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true